# vsc-cpp-introduction

./: README.md
lab1_mac/: CMakeLists.txt  exAmain.cpp  exBmain.cpp  mystring.h
lab1_unix/: CMakeLists.txt  dictionaryList.cpp  dictionaryList.h  human_program.cpp  mystring.cpp  mystring_B.cpp
lab1_unix/src/: CMakeLists.txt  exAmain.cpp
lab1_windows/: CMakeLists.txt  mystring_B.h
log/: log.cpp  log.h
